--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "typeorm": "^0.2.21"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
     "@nestjs/cli": "^6.12.9",
     "@nestjs/schematics": "^6.7.5",
     "@nestjs/testing": "^6.10.8",
@@ -42,8 +44,10 @@
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.16",
     "@types/supertest": "^2.0.8",
+    "husky": "^3.1.0",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
+    "standard-version": "^7.0.1",
     "supertest": "^4.0.2",
     "ts-jest": "^24.2.0",
     "ts-loader": "^6.2.1",
@@ -65,5 +69,10 @@
     },
     "coverageDirectory": "./coverage",
     "testEnvironment": "node"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
