--- a/package.json
+++ b/package.json
@@ -23,10 +23,16 @@
     "@hapi/joi": "^16.1.8",
     "@nestjs/common": "^6.10.8",
     "@nestjs/core": "^6.10.8",
+    "@nestjs/jwt": "^6.1.1",
+    "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.10.8",
     "@nestjs/typeorm": "^6.2.0",
+    "class-validator": "^0.11.0",
     "dotenv": "^8.2.0",
     "mysql": "^2.17.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
@@ -43,6 +49,8 @@
     "@types/hapi__joi": "^16.0.4",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.16",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "husky": "^3.1.0",
     "jest": "^24.9.0",
